--- a/p-blog-frontend/src/components/buttons/login.css
+++ b/p-blog-frontend/src/components/buttons/login.css
@@ -1,7 +1,13 @@
+.btn-wrapper {
+    width: 15%;
+    padding: 5px;
+    float: right;
+}
+
 .btns {
     border: 0;
     border-radius: 25px;
-    width: 4%;
+    width: 40%;
     height: 30px;
     font-weight: bold;
 }
