--- a/p-blog-frontend/src/components/log-in-page/loginPage.css
+++ b/p-blog-frontend/src/components/log-in-page/loginPage.css
@@ -7,13 +7,13 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 
 .action-field-wrapper {
     display: grid;
     grid-template-rows: 1fr 1fr;
-    gap: 30px;
+    gap: 5px;
     justify-content: center;
 }
 
