--- a/p-blog-frontend/src/components/sign-up-page/signupPage.css
+++ b/p-blog-frontend/src/components/sign-up-page/signupPage.css
@@ -7,49 +7,26 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
-}
-
-.signup-action-field-wrapper {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    gap: 30px;
-    justify-content: center;
+    transform: translate(-50%, -50%);
 }
 
 .signup-input-field-wrapper {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px;
-    width: 70%;
+    grid-template-rows:
+        1fr 1fr 1fr 1fr 1fr,
+        1fr,
+        1fr,
+        1fr;
+    gap: 5px;
 }
 
 .signup-input-page-btn-wrapper {
-    display: grid;
-    gap: 10px;
-    justify-content: center;
-}
-
-.login-input {
-    height: 30px;
-    width: 300px;
+    margin-top: 20px;
+    padding-left: 30%;
+    padding-right: 30%;
 }
 
 .login-btns {
-    border: 0;
-    width: 100%;
-    height: 60%;
-    border-radius: 30px;
-}
-
-#login-pg-libtn {
-    background-color: rgb(129, 243, 129);
-}
-
-#login-pg-clbtn {
-    background-color: rgb(243, 129, 129);
-}
-
-.welcome-msg {
-    text-align: center;
+    padding: 10px;
+    margin-top: 10px;
 }
